new requirements&enhancements